# uav_bev_test

./: .gitignore  README.md
bev_drone_project/: package.xml  setup.cfg  setup.py
bev_drone_project/bev_drone_project/: autopilot_node.py  image_saver_node.py
bev_drone_project/launch/: sim_bev.launch.py
bev_drone_project/models/flying_camera/: model.config  model.sdf
bev_drone_project/worlds/: bev_world.world
uav_bev_sim/: package.xml  setup.cfg  setup.py
uav_bev_sim/launch/: sim.launch.py
uav_bev_sim/models/uav_platform/: model.config  model.sdf  model_workable_0226.sdf
uav_bev_sim/resource/: uav_bev_sim
uav_bev_sim/test/: test_launch_pose_bridge.py
uav_bev_sim/uav_bev_sim/: cmd_vel_pose_controller.py  coverage_planner_canmove.py  coverage_planner_feedback.py  image_capture.py  motion_controller.py  stitching_node.py  uav_autopilot.py  uav_pose_publisher.py
uav_bev_sim/worlds/: mosaic_world.sdf
